<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_login_newuser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".Fragments.LoginPasswordFragment">

    <TextView
        android:id="@+id/tv_login_newuser_userid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_newuser_userid_Español"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_login_newuser_firstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_newuser_firstname" />

    <EditText
        android:id="@+id/et_login_newuser_passwordconfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vt_login_newuser_passwordconfirm" />

    <EditText
        android:id="@+id/et_login_newuser_lastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_newuser_lastname" />

    <TextView
        android:id="@+id/vt_login_newuser_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_newuser_password_Español"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_newuser_email" />

    <TextView
        android:id="@+id/vt_login_newuser_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_newuser_email_Español"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_newuser_lastname" />

    <TextView
        android:id="@+id/vt_login_newuser_passwordconfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_newuser_passwordconfirm_Español"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_newuser_password" />

    <TextView
        android:id="@+id/tv_login_newuser_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_newuser_lastname_Español"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_newuser_firstname" />

    <TextView
        android:id="@+id/tv_login_newuser_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_newuser_firstname_Español"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_newuser_userid" />

    <EditText
        android:id="@+id/et_login_newuser_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vt_login_newuser_email" />

    <EditText
        android:id="@+id/et_login_newuser_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vt_login_newuser_password" />

    <EditText
        android:id="@+id/et_login_newuser_userid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_newuser_userid" />

    <Button
        android:id="@+id/bt_login_newuser_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_login_newuser_cancel_Español"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_newuser_passwordconfirm" />

    <Button
        android:id="@+id/bt_login_newuser_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_login_newuser_add_Español"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_newuser_passwordconfirm" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>