<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_login_newuser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".Fragments.LoginUserInitFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

    <TextView
        android:id="@+id/tv_login_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/tv_user_Español"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_ht" />

    <EditText
        android:id="@+id/et_login_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_user" />

    <Button
        android:id="@+id/bt_login_user_next"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:text="@string/bt_next_Español"
        app:layout_constraintBottom_toTopOf="@+id/gl_hb"
        app:layout_constraintEnd_toStartOf="@+id/gl_vr" />

    <Button
        android:id="@+id/bt_login_user_create"
        style="Widget.AppCompat.Button"
        android:layout_width="154dp"
        android:layout_height="51dp"
        android:background="@android:drawable/divider_horizontal_dim_dark"
        android:text="@string/bt_create_Español"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toTopOf="@+id/gl_hb"
        app:layout_constraintStart_toStartOf="@+id/gl_vl" />

    <Button
        android:id="@+id/bt_login_user_recover"
        style="Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:background="@android:drawable/divider_horizontal_dim_dark"
        android:text="@string/bt_recover_Español"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_login_user_name" />

    <ImageView
        android:id="@+id/iv_login_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType= "center"
        app:layout_constraintBottom_toTopOf="@+id/gl_ib"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:mipmap/sym_def_app_icon"
        tools:src="@tools:sample/backgrounds/scenic" />

</androidx.constraintlayout.widget.ConstraintLayout>